Moving ajax loader to right of screen to avoid text overflows

--- a/protected/sass/components/_ajax.scss
+++ b/protected/sass/components/_ajax.scss
@@ -5,7 +5,7 @@
 }
 
 .ajax-flag {
-	display: hidden;
+	display: none;
 }
 
 .ajax-loading .ajax-flag {
@@ -15,8 +15,8 @@
 	
 	color: $orange;
 	display: block;
-	left: 0;
 	position: fixed;
+	right: 0;
 	top: 0;
 	z-index: 10000000; // in front!
 }
